# SVoice-ver-3

./: .gitignore  LICENSE  README.md  index.html  logo-preview.html  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml
docs/superpowers/: START-NEXT-SESSION.md
docs/superpowers/plans/: 2026-04-16-iter1-walking-skeleton-spike.md  2026-04-17-iter2-real-stt.md  2026-04-17-remaining-work-roadmap.md  2026-04-18-distribution-readiness.md  2026-04-18-gemini-provider.md  2026-04-18-iter4.5a-keyring.md
docs/superpowers/specs/: 2026-04-16-iter1-walking-skeleton-spike-design.md  2026-04-16-sac-mitigation-plan.md  2026-04-16-stt-spike-report.md  2026-04-18-distribution-readiness-design.md  2026-04-18-iter4.5a-keyring-design.md
scripts/: bundle-python.ps1  generate-icons.ps1  setup-dev.ps1
src/: main.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bins/stt-spike/: Cargo.toml
src-tauri/bins/stt-spike/python/: spike.py
src-tauri/bins/stt-spike/src/: download.rs  main.rs  metrics.rs
src-tauri/bins/stt-spike/testdata/: sv-test.expected.txt
src-tauri/capabilities/: default.json
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: capture.rs  devices.rs  lib.rs  resample.rs  ringbuffer.rs  vad.rs  volume.rs
src-tauri/crates/hotkey/: Cargo.toml
src-tauri/crates/hotkey/src/: lib.rs  ll_hook.rs  ptt_state.rs  register.rs
src-tauri/crates/inject/: Cargo.toml
src-tauri/crates/inject/src/: clipboard.rs  lib.rs  send_input.rs
src-tauri/crates/integrations/: Cargo.toml
src-tauri/crates/integrations/src/: lib.rs
src-tauri/crates/integrations/src/google/: calendar.rs  callback_response.html  callback_server.rs  client.rs  gmail.rs  mod.rs  oauth.rs  tool_registry.rs
src-tauri/crates/ipc/: Cargo.toml
src-tauri/crates/ipc/src/: commands.rs  lib.rs
src-tauri/crates/llm/: Cargo.toml
src-tauri/crates/llm/examples/: list_gemini_models.rs
src-tauri/crates/llm/src/: anthropic.rs  gemini.rs  groq.rs  lib.rs  ollama.rs  ollama_install.rs  provider.rs  tools.rs
src-tauri/crates/secrets/: Cargo.toml
src-tauri/crates/secrets/src/: lib.rs
src-tauri/crates/settings/: Cargo.toml
src-tauri/crates/settings/src/: lib.rs
src-tauri/crates/smart-functions/: Cargo.toml
src-tauri/crates/smart-functions/src/: lib.rs
src-tauri/crates/stt/: Cargo.toml
src-tauri/crates/stt/src/: engine.rs  groq.rs  lib.rs  protocol.rs  sidecar.rs
src-tauri/crates/stt/tests/: sidecar_test.rs
src-tauri/crates/updates/: Cargo.toml
src-tauri/crates/updates/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/resources/python/: README.md  stt_sidecar.py
src-tauri/resources/python-runtime/: .gitkeep
src-tauri/src/: agentic.rs  lib.rs  main.rs  migrate.rs  screen_clip.rs
src/components/: SVoiceLogo.tsx
src/lib/: settings-api.ts
src/overlays/: RecordingIndicator.css  RecordingIndicator.tsx  ScreenClipOverlay.css  ScreenClipOverlay.tsx  action-popup-entry.tsx  action-popup.html  overlay-entry.tsx  overlay.html  screen-clip-entry.tsx  screen-clip.html
src/palette/: Palette.css  Palette.tsx  palette-entry.tsx  palette.html
src/windows/: ActionPopup.css  ActionPopup.tsx  Main.tsx  Settings.css  Settings.tsx  action-response-format.tsx  action-response-parser.ts
