[package]
name = "svoice-v3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SVoice 3 — svensk dikterings-app för Windows"
default-run = "svoice-v3"

[lib]
name = "svoice_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["image-png"] }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-autostart = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
svoice-audio = { path = "crates/audio" }
svoice-hotkey = { path = "crates/hotkey" }
svoice-inject = { path = "crates/inject" }
svoice-integrations = { path = "crates/integrations" }
svoice-stt = { path = "crates/stt" }
svoice-ipc = { path = "crates/ipc" }
svoice-settings = { path = "crates/settings" }
svoice-llm = { path = "crates/llm" }
svoice-secrets = { path = "crates/secrets" }
svoice-smart-functions = { path = "crates/smart-functions" }
svoice-updates = { path = "crates/updates" }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
windows = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "svoice-v3"
path = "src/main.rs"

[workspace]
resolver = "2"
members = [
    "crates/audio",
    "crates/hotkey",
    "crates/inject",
    "crates/integrations",
    "crates/ipc",
    "crates/llm",
    "crates/secrets",
    "crates/settings",
    "crates/smart-functions",
    "crates/stt",
    "crates/updates",
    "bins/stt-spike",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.95"

[workspace.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
arboard = "3"
anyhow = "1"
