[package]
name = "svoice-hotkey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tauri = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
