[package]
name = "svoice-inject"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
arboard = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
