[package]
name = "svoice-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
url = "2"
svoice-secrets = { path = "../secrets" }
