[package]
name = "svoice-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
svoice-hotkey = { path = "../hotkey" }
svoice-inject = { path = "../inject" }
svoice-settings = { path = "../settings" }
svoice-stt = { path = "../stt" }
