[package]
name = "svoice-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
svoice-audio = { path = "../audio" }
svoice-hotkey = { path = "../hotkey" }
svoice-inject = { path = "../inject" }
svoice-integrations = { path = "../integrations" }
svoice-llm = { path = "../llm" }
svoice-secrets = { path = "../secrets" }
svoice-settings = { path = "../settings" }
svoice-stt = { path = "../stt" }
